# postcodes-uk

./: README.md
postcodes_mcp/: .gitignore  LICENSE  marketplace.json  pyproject.toml
postcodes_mcp/.github/workflows/: publish.yml
postcodes_mcp/postcodes_mcp/: __init__.py
postcodes_mcp/tests/: test_postcodes.py
